<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MonitorFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <com.dawn.impetus.automove.ui.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:myTitle="监控"
        app:backIconIsVisible = "false"></com.dawn.impetus.automove.ui.TitleView>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_free"/>
        <TextView
            android:id="@+id/tv_node_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_exclusive"/>
        <TextView
            android:id="@+id/tv_node_exclusive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_busy"/>
        <TextView
            android:id="@+id/tv_node_busy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/node_down"/>
        <TextView
            android:id="@+id/tv_node_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/node_monitor"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/core_used"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/core_free"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_monitor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"></ListView>

</LinearLayout>
