<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:src="@drawable/icon_avatar_login" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="智能移动运维系统"
        android:textSize="25dp"
        android:gravity="center"
        />
    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_address"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/addresstxthint"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />
            <EditText
                android:id="@+id/login_port"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/porttxthint"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

                <!-- android:ems="10"表示EditText内最多只显示10个字符，超出不显示 -->
                <!-- android:singleLine="true"表示不能全部显示时，后面用“…”来表示 -->
            <EditText
                android:id="@+id/login_edtId"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/idtxthint"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />

            <!-- 横线  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/login_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/pwdtxthint"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_style"
            android:text="@string/loginbtntext"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />



</LinearLayout>